2011-01-03  Till Kamppeter <till.kamppeter@gmail.com>

	* configure.ac: Allow choosing the install directory for the
	  Perl library DB.pm (perl, site, vendor). Requires autoconf 2.52
	  or newer (checked with "AC_PREREQ([2.52])"). Bug #605. Thanks
	  to Christopher Yeleighton (giecrilj at stegny dot 2a dot pl) for
	  the patch.

	* foomatic-perl-data.c: Eliminated compiler warnings by consistent
	  use of "const" with xmlChar and char variables (bug #604). Thanks
	  to Christopher Yeleighton (giecrilj at stegny dot 2a dot pl) for
	  the patch.

	* foomatic-combo-xml.c: Improved readability of the code by using
	  symbolic constants and additional comments. Also eliminated
	  warnings about value-less "return"s and unused variables (bug
	  #599, #600, #601). Thanks to Christopher Yeleighton (giecrilj at
	  stegny dot 2a dot pl) for the patch.

2010-12-15  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Documented special entities for inserting job parameters,
	  like "&job;", "&user;", "&host;", "&title;", "&options;", ...

2010-12-13  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppd-to-xml.in: Allow generating a printer XML files also
	  from more than one PPD file for the same printer with only one call
	  of the foomatic-ppd-to-xml script. Feature request from George Liu
	  from Ricoh (bug #565).

	* lib/Foomatic/DB.pm: Allow loading arbitrary printer and driver
	  XML files into the Perl data structure, not only XML files which
	  are in the current XML database.
	  When generating Perl data from a PPD do not add a new paragraph to
	  the printer comments if the added comment is empty.

2010-12-09  Till Kamppeter <till.kamppeter@gmail.com>

	* Makefile.in: Rearranged gcc command line so that linking works
	  with gcc 4.5.x (Ubuntu bug #687973).

2010-12-08  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Sort the driver lists in printer XML files
	  alphabetically (case-insensitive) when generating XML files from